# portage-lostfiles

./: README.md  lostfiles.py  pyproject.toml  setup.py
tests/: test_lostfiles.py
