[project]
name = 'lostfiles'
version = '0.5.6'
description = 'A simple script to identify files not tracked by Portage package manager'
readme = 'README.md'
requires-python = '>=3.8'
keywords = ['gentoo', 'portage', 'maintenance']
license = {file = 'LICENSE'}
authors = [
  {name = 'Michael Egger', email = 'egger.m@protonmail.com'},
]

[dev-dependencies]
test = ["pytest"]

[project.scripts]
lostfiles = "lostfiles:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
